Fix more spots where the block names shifted with the theme change (sidebar menus) and fix ordering of determining how many desks and menus and stuff are in the sidebar to accomodate the new naming

--- a/components/02-compounds/site/_sidebar.scss
+++ b/components/02-compounds/site/_sidebar.scss
@@ -46,7 +46,7 @@ $sidebar-item-max-width: 520px;
     margin: 0 auto;
 
     .sidebar-nav-wrapper,
-    #block-views-block-service-desk-block-block-1,
+    #block-lits-theme-views-block-service-desk-block-block-1,
     .views-row {
       width: 100%;
     }
@@ -109,7 +109,7 @@ $sidebar-item-max-width: 520px;
         width: 50%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
@@ -122,7 +122,7 @@ $sidebar-item-max-width: 520px;
         width: 100%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
@@ -134,7 +134,7 @@ $sidebar-item-max-width: 520px;
         width: 25%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 50%;
       }
 
@@ -157,7 +157,7 @@ $sidebar-item-max-width: 520px;
         width: 50%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
@@ -167,7 +167,7 @@ $sidebar-item-max-width: 520px;
         width: 50%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
@@ -180,7 +180,7 @@ $sidebar-item-max-width: 520px;
           width: calc(100% / 3);
         }
 
-        #block-views-block-service-desk-block-block-1 {
+        #block-lits-theme-views-block-service-desk-block-block-1 {
           width: calc(100% / 3);
           max-width: $sidebar-item-max-width;
         }
@@ -191,7 +191,7 @@ $sidebar-item-max-width: 520px;
           width: calc(100% / 3);
         }
 
-        #block-views-block-service-desk-block-block-1 {
+        #block-lits-theme-views-block-service-desk-block-block-1 {
           width: calc(100% * 2 / 3);
           max-width: $sidebar-item-max-width * 2;
 
@@ -204,7 +204,7 @@ $sidebar-item-max-width: 520px;
 
     &.sidebar-side #sidebar-container {
       &.menu-1.desk-2 {
-        #block-views-block-service-desk-block-block-1 .views-row {
+        #block-lits-theme-views-block-service-desk-block-block-1 .views-row {
           width: 100%;
         }
       }
@@ -220,7 +220,7 @@ $sidebar-item-max-width: 520px;
 
   @include breakpoint($small-width) {
     #sidebar-container.menu-0.desk-2 {
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
 
         .views-row {
@@ -234,7 +234,7 @@ $sidebar-item-max-width: 520px;
         width: 50%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 50%;
         max-width: $sidebar-item-max-width;
 
@@ -254,7 +254,7 @@ $sidebar-item-max-width: 520px;
   @include breakpoint($medium-width) {
     &.sidebar-side #sidebar-container.menu-0.desk-2,
     &.sidebar-side #sidebar-container.menu-1.desk-1 {
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
 
         .views-row {
@@ -275,7 +275,7 @@ $sidebar-item-max-width: 520px;
         width: 50%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
@@ -289,7 +289,7 @@ $sidebar-item-max-width: 520px;
         width: 100%;
       }
 
-      #block-views-block-service-desk-block-block-1 {
+      #block-lits-theme-views-block-service-desk-block-block-1 {
         width: 100%;
       }
     }
